2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (have_sse42): Do not declare static
	* common-src/util.h (have_sse42): Add extern declaration
	* common-src/crc32-test.c: Do not run hardware crc32 test if the cpu
	  do not have sse4.2

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (noinst_HEADERS): Add amcrc32chw.h

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcrc32chw.c: New file to compute crc32c with sse4.2
	  instruction
	* common-src/amcrc32chw.h: New prototype file
	* common-src/Makefile.am: Code to build amcrc32chw
	* common-src/amanda.h: Define GCC_VERSION
	* common-src/crc32-test.c: Add test for hw version
	* common-src/util.c: Detect if processor hace sse4.2 and use it
	* config/amanda/flags.m4 (AMANDA_CHECK_SSE42) New macro to detext if
	  gcc have -msse4.2
	* configure.in: Call AMANDA_CHECK_SSE42

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c: Chanre the crc32 POLY to 0x82F63B78

2015-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (crc32_add): Use software improvement on big
	  endian machine.

2015-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c: Fix compilation

2015-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c: Fix compilation

2015-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (crc32_add_16bytes): New faster algorith to
	  compute crc 32
	* common-src/util.c (crc32_add): Call crc32_add_1byte or
	  crc32_add_16bytes.
	* common-src/util.h (crc32_add_1byte, crc32_add_16bytes): Add new
	  prototypes.
	* common-src/Makefile.am (TEST): Add crc32-test
	* common-src/crc32-test.c: New program to test crc32

2015-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/debug.c (debug_ressource_usage): New function to write
	  the system ressource utilization to the debug file